<resources>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="community">COMMUNITY</string>
    <string name="write_email_pls">이메일을 입력하세요</string>
    <string name="write_pw_pls">비밀번호를 입력하세요</string>
    <string name="login">로그인</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_btn_text">회원가입</string>
    <string name="go_board">게시판 가기</string>
    <string name="go_profile">프로필 가기</string>
    <string name="no_account">계정이 없으신가요?</string>
    <string name="board">게시판</string>
    <string name="home">홈</string>
    <string name="write">글쓰기</string>
    <string name="title">제목</string>
    <string name="msg">내용을 입력하세요</string>
    <string name="item_title">게시물 제목</string>
    <string name="writer">작성자</string>
    <string name="title_ex">제목제목제목</string>
    <string name="msg_ex">게시글게시글게시글게시글게시글게시글게시글게시글게시글게시글게시글게시글게시글게시글게시글게시글게시글게시글게시글게시글게시글게시글게시글게시글게시글</string>
    <string name="my_profile">내 프로필</string>
    <string name="name">이름</string>
    <string name="my_msg_number">올린 게시글 수</string>
</resources>